[package]
name = "axum-hello-world"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.2.4"
tokio = { version = "1.11.0", features = ["full"] }
tower = { version = "0.4.10", features = ["timeout"] }
log = "0.4.14"
hyper = "0.14.14"
pin-project = "1.0.8"
